k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-api
  namespace: hospital
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hospital-api
  template:
    metadata:
      labels:
        app: hospital-api
    spec:
      containers:
        - name: api
          image: hospital-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 15
            timeoutSeconds: 3
          resources:
            requests:
              cpu: "256m"
              memory: "256Mi"
            limits:
              cpu: "512m"
              memory: "512Mi"
