k8s/sqlserver-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hospital-sqlserver
  namespace: hospital
spec:
  serviceName: hospital-sqlserver
  replicas: 1
  selector:
    matchLabels:
      app: hospital-sqlserver
  template:
    metadata:
      labels:
        app: hospital-sqlserver
    spec:
      volumes:
        - name: db-scripts
          configMap:
            name: hospital-db-scripts
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-data
              mountPath: /var/opt/mssql
            - name: db-scripts
              mountPath: /scripts
              readOnly: true
          readinessProbe:
            exec:
              command:
                - /opt/mssql-tools18/bin/sqlcmd
                - -S
                - localhost
                - -U
                - sa
                - -P
                - Hospital@2024
                - -C
                - -Q
                - SELECT 1
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: mssql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
